2.0.10
	+ Add migration script to delete old backup configuration from
  	  ebox crontab
	+ Use a geometric progression for timeout values for retrying
	  connecting to backup servers when there are connectivity problems
	+ Fixed event message when something goes wrong at first stages
	+ Fixed bug in checking right method changing
	+ Added a way to delete orphan metadata files
2.0.9
	+ Change one of our backup servers fingerprint
	+ Using the new module name for cloud-prof package
	+ Store metadata in Disaster Recovery backups
	+ Autodetect encryption type instead of asking
	+ Ask for domains to restore right after choosing the date
	+ Avoid some warnings in restore-tool when executed in a shell
2.0.8
	+ Added missing crontab string for monthly full backup
	+ Fixed wrong crontab string for weekly full backup
	+ Use software module and ProgressIndicator to install packages
	+ Fixed problems with pulsating progress bar in restore-tool
	+ Use fork + exec to launch zenity, fixes argument parsing problems
	+ Making environment local for installing modules in restore-tool
	+ Added cleanup operation on failure
	+ Added backup-cleanup script for manual cleanups
	+ Properly handle connection errors in RemoteStorage
2.0.7
	+ Set label of restore file button to "Restore" instead of "Change"
	+ Set the volume size to 25 as default for remote system
	+ Added support for disaster recovery
	+ Allowed to restore the root directory in
	  EBox::EBackup::restoreFile
	+ Method for restore log database from a directory
	+ Disabled asymmetric encryption method until we can support in in
	  disaster recovery
	+ Fixed non-internationalizable strings in RemoteSettings model
2.0.6
	+ Using /etc/cron.d instead of ebox crontab for scheduled
	  backups
	+ Fixed error in scheduled backups using week days
2.0.5
	+ Better error and precondition control when making backups
	+ Do not spawn a separate process to make the configuration backup