@@ -1,6 +1,10 @@
+HEAD
+	+ Added 'files included' domain and restore all fiels options to
+	  restore-tool
+	+ Using 'cat' command instead of 'tail' to retrieve backup metadata
 2.0.10
 	+ Add migration script to delete old backup configuration from
-  	  ebox crontab
+	  ebox crontab
 	+ Use a geometric progression for timeout values for retrying
 	  connecting to backup servers when there are connectivity problems
 	+ Fixed event message when something goes wrong at first stages
